Fix double spacing

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ h3 {
 	font-size: 25%;
     font-weight: 700;
     color: #000;
-    line-height: 30px;
+    line-height: 20px;
     font-family: 'Capriola', sans-serif;
 }
 
@@ -384,7 +384,7 @@ ul.navbar-nav li a:focus { background: none; color: #2ba560; outline: 0; }
 .lecture-list ul li ul { padding:5px 0 5px 18px; font-size:15px; }
 .lecture-list ul li ul li { font-size:1px; }
 
-.other-list { font-size:15px; }
+.other-list { font-size:15px; line-height: 20px;}
 .other-list ul { font-size:15px; }
 .other-list ul li { font-size:12px; }
 .other-list ul li ul { padding:5px 0 5px 18px; font-size:15px; }
